contrib/adsabs/src/java/org/apache/lucene/queryparser/flexible/aqp/parser/ADSParser.java
// $ANTLR 3.4 /dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g 2012-07-27 02:00:10

   package org.apache.lucene.queryparser.flexible.aqp.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class ADSParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "AS_CHAR", "ATOM", "AUTHOR_SEARCH", "BOOST", "CARAT", "CLAUSE", "COLON", "COMMA", "DATE_RANGE", "DATE_TOKEN", "DQUOTE", "D_NUMBER", "EQUAL", "ESC_CHAR", "FIELD", "FUNC_NAME", "FUZZY", "HASH", "HOUR", "H_NUMBER", "INT", "LBRACK", "LPAREN", "MINUS", "MODIFIER", "M_NUMBER", "NEAR", "NOT", "NUMBER", "OPERATOR", "OR", "PHRASE", "PHRASE_ANYTHING", "PLUS", "QANYTHING", "QCOMMA", "QCOORDINATE", "QDATE", "QFUNC", "QIDENTIFIER", "QMARK", "QNORMAL", "QPHRASE", "QPHRASETRUNC", "QPOSITION", "QRANGEEX", "QRANGEIN", "QTRUNCATED", "RBRACK", "RPAREN", "SEMICOLON", "SQUOTE", "STAR", "S_NUMBER", "TERM_CHAR", "TERM_NORMAL", "TERM_START_CHAR", "TERM_TRUNCATED", "TILDE", "TMODIFIER", "TO", "WS", "'#'", "'/'", "'<=>'", "'='", "'arXiv:'", "'arxiv:'", "'doi:'"
    };

    public static final int EOF=-1;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int AND=4;
    public static final int AS_CHAR=5;
    public static final int ATOM=6;
    public static final int AUTHOR_SEARCH=7;
    public static final int BOOST=8;
    public static final int CARAT=9;
    public static final int CLAUSE=10;
    public static final int COLON=11;
    public static final int COMMA=12;
    public static final int DATE_RANGE=13;
    public static final int DATE_TOKEN=14;
    public static final int DQUOTE=15;
    public static final int D_NUMBER=16;
    public static final int EQUAL=17;
    public static final int ESC_CHAR=18;
    public static final int FIELD=19;
    public static final int FUNC_NAME=20;
    public static final int FUZZY=21;
    public static final int HASH=22;
    public static final int HOUR=23;
    public static final int H_NUMBER=24;
    public static final int INT=25;
    public static final int LBRACK=26;
    public static final int LPAREN=27;
    public static final int MINUS=28;
    public static final int MODIFIER=29;
    public static final int M_NUMBER=30;
    public static final int NEAR=31;
    public static final int NOT=32;
    public static final int NUMBER=33;
    public static final int OPERATOR=34;
    public static final int OR=35;
    public static final int PHRASE=36;
    public static final int PHRASE_ANYTHING=37;
    public static final int PLUS=38;
    public static final int QANYTHING=39;
    public static final int QCOMMA=40;
    public static final int QCOORDINATE=41;
    public static final int QDATE=42;
    public static final int QFUNC=43;
    public static final int QIDENTIFIER=44;
    public static final int QMARK=45;
    public static final int QNORMAL=46;
    public static final int QPHRASE=47;
    public static final int QPHRASETRUNC=48;
    public static final int QPOSITION=49;
    public static final int QRANGEEX=50;
    public static final int QRANGEIN=51;
    public static final int QTRUNCATED=52;
    public static final int RBRACK=53;
    public static final int RPAREN=54;
    public static final int SEMICOLON=55;
    public static final int SQUOTE=56;
    public static final int STAR=57;
    public static final int S_NUMBER=58;
    public static final int TERM_CHAR=59;
    public static final int TERM_NORMAL=60;
    public static final int TERM_START_CHAR=61;
    public static final int TERM_TRUNCATED=62;
    public static final int TILDE=63;
    public static final int TMODIFIER=64;
    public static final int TO=65;
    public static final int WS=66;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public ADSParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public ADSParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return ADSParser.tokenNames; }
    public String getGrammarFileName() { return "/dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g"; }


    public static class mainQ_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "mainQ"
    // /dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g:41:1: mainQ : ( clauseOr )+ -> ^( OPERATOR[\"DEFOP\"] ( clauseOr )+ ) ;
    public final ADSParser.mainQ_return mainQ() throws RecognitionException {
        ADSParser.mainQ_return retval = new ADSParser.mainQ_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        ADSParser.clauseOr_return clauseOr1 =null;


        RewriteRuleSubtreeStream stream_clauseOr=new RewriteRuleSubtreeStream(adaptor,"rule clauseOr");
        try {
            // /dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g:41:7: ( ( clauseOr )+ -> ^( OPERATOR[\"DEFOP\"] ( clauseOr )+ ) )
            // /dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g:42:2: ( clauseOr )+
            {
            // /dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g:42:2: ( clauseOr )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==AUTHOR_SEARCH||LA1_0==DATE_RANGE||LA1_0==D_NUMBER||LA1_0==FUNC_NAME||(LA1_0 >= HOUR && LA1_0 <= H_NUMBER)||(LA1_0 >= LBRACK && LA1_0 <= MINUS)||LA1_0==NUMBER||(LA1_0 >= PHRASE && LA1_0 <= PLUS)||LA1_0==QMARK||LA1_0==STAR||LA1_0==TERM_NORMAL||LA1_0==TERM_TRUNCATED||LA1_0==TO||LA1_0==67||(LA1_0 >= 69 && LA1_0 <= 73)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g:42:2: clauseOr
            	    {
            	    pushFollow(FOLLOW_clauseOr_in_mainQ168);
            	    clauseOr1=clauseOr();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_clauseOr.add(clauseOr1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            // AST REWRITE
            // elements: clauseOr
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 42:12: -> ^( OPERATOR[\"DEFOP\"] ( clauseOr )+ )
            {
                // /dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g:42:15: ^( OPERATOR[\"DEFOP\"] ( clauseOr )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(OPERATOR, "DEFOP")
                , root_1);

                if ( !(stream_clauseOr.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_clauseOr.hasNext() ) {
                    adaptor.addChild(root_1, stream_clauseOr.nextTree());

                }
                stream_clauseOr.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "mainQ"


    public static class clauseOr_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "clauseOr"
    // /dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g:46:1: clauseOr : (first= clauseAnd -> $first) ( or others= clauseAnd -> ^( OPERATOR[\"OR\"] ( clauseAnd )+ ) )* ;
    public final ADSParser.clauseOr_return clauseOr() throws RecognitionException {
        ADSParser.clauseOr_return retval = new ADSParser.clauseOr_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        ADSParser.clauseAnd_return first =null;

        ADSParser.clauseAnd_return others =null;

        ADSParser.or_return or2 =null;


        RewriteRuleSubtreeStream stream_clauseAnd=new RewriteRuleSubtreeStream(adaptor,"rule clauseAnd");
        RewriteRuleSubtreeStream stream_or=new RewriteRuleSubtreeStream(adaptor,"rule or");
        try {
            // /dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g:47:3: ( (first= clauseAnd -> $first) ( or others= clauseAnd -> ^( OPERATOR[\"OR\"] ( clauseAnd )+ ) )* )
            // /dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g:47:5: (first= clauseAnd -> $first) ( or others= clauseAnd -> ^( OPERATOR[\"OR\"] ( clauseAnd )+ ) )*
            {
            // /dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g:47:5: (first= clauseAnd -> $first)
            // /dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g:47:6: first= clauseAnd
            {
            pushFollow(FOLLOW_clauseAnd_in_clauseOr201);
            first=clauseAnd();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_clauseAnd.add(first.getTree());

            // AST REWRITE
            // elements: first
            // token labels: 
            // rule labels: retval, first
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_first=new RewriteRuleSubtreeStream(adaptor,"rule first",first!=null?first.tree:null);

            root_0 = (Object)adaptor.nil();
            // 47:22: -> $first
            {
                adaptor.addChild(root_0, stream_first.nextTree());

            }


            retval.tree = root_0;
            }

            }


            // /dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g:47:33: ( or others= clauseAnd -> ^( OPERATOR[\"OR\"] ( clauseAnd )+ ) )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==OR) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g:47:34: or others= clauseAnd
            	    {
            	    pushFollow(FOLLOW_or_in_clauseOr210);
            	    or2=or();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_or.add(or2.getTree());

            	    pushFollow(FOLLOW_clauseAnd_in_clauseOr214);
            	    others=clauseAnd();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_clauseAnd.add(others.getTree());

            	    // AST REWRITE
            	    // elements: clauseAnd
            	    // token labels: 
            	    // rule labels: retval
            	    // token list labels: 
            	    // rule list labels: 
            	    // wildcard labels: 
            	    if ( state.backtracking==0 ) {

            	    retval.tree = root_0;
            	    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            	    root_0 = (Object)adaptor.nil();
            	    // 47:54: -> ^( OPERATOR[\"OR\"] ( clauseAnd )+ )
            	    {
            	        // /dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g:47:57: ^( OPERATOR[\"OR\"] ( clauseAnd )+ )
            	        {
            	        Object root_1 = (Object)adaptor.nil();
            	        root_1 = (Object)adaptor.becomeRoot(
            	        (Object)adaptor.create(OPERATOR, "OR")
            	        , root_1);

            	        if ( !(stream_clauseAnd.hasNext()) ) {
            	            throw new RewriteEarlyExitException();
            	        }
            	        while ( stream_clauseAnd.hasNext() ) {
            	            adaptor.addChild(root_1, stream_clauseAnd.nextTree());

            	        }
            	        stream_clauseAnd.reset();

            	        adaptor.addChild(root_0, root_1);
            	        }

            	    }


            	    retval.tree = root_0;
            	    }

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "clauseOr"


    public static class clauseAnd_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "clauseAnd"
    // /dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g:51:1: clauseAnd : (first= clauseSemicolon -> $first) ( and others= clauseSemicolon -> ^( OPERATOR[\"AND\"] ( clauseSemicolon )+ ) )* ;
    public final ADSParser.clauseAnd_return clauseAnd() throws RecognitionException {
        ADSParser.clauseAnd_return retval = new ADSParser.clauseAnd_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        ADSParser.clauseSemicolon_return first =null;

        ADSParser.clauseSemicolon_return others =null;

        ADSParser.and_return and3 =null;


        RewriteRuleSubtreeStream stream_clauseSemicolon=new RewriteRuleSubtreeStream(adaptor,"rule clauseSemicolon");
        RewriteRuleSubtreeStream stream_and=new RewriteRuleSubtreeStream(adaptor,"rule and");
        try {
            // /dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g:52:3: ( (first= clauseSemicolon -> $first) ( and others= clauseSemicolon -> ^( OPERATOR[\"AND\"] ( clauseSemicolon )+ ) )* )
            // /dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g:52:5: (first= clauseSemicolon -> $first) ( and others= clauseSemicolon -> ^( OPERATOR[\"AND\"] ( clauseSemicolon )+ ) )*
            {
            // /dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g:52:5: (first= clauseSemicolon -> $first)
            // /dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g:52:6: first= clauseSemicolon
            {
            pushFollow(FOLLOW_clauseSemicolon_in_clauseAnd244);
            first=clauseSemicolon();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_clauseSemicolon.add(first.getTree());

            // AST REWRITE
            // elements: first
            // token labels: 
            // rule labels: retval, first
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_first=new RewriteRuleSubtreeStream(adaptor,"rule first",first!=null?first.tree:null);

            root_0 = (Object)adaptor.nil();
            // 52:29: -> $first
            {
                adaptor.addChild(root_0, stream_first.nextTree());

            }


            retval.tree = root_0;
            }

            }


            // /dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g:52:40: ( and others= clauseSemicolon -> ^( OPERATOR[\"AND\"] ( clauseSemicolon )+ ) )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==AND) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g:52:41: and others= clauseSemicolon
            	    {
            	    pushFollow(FOLLOW_and_in_clauseAnd254);
            	    and3=and();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_and.add(and3.getTree());

            	    pushFollow(FOLLOW_clauseSemicolon_in_clauseAnd258);
            	    others=clauseSemicolon();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_clauseSemicolon.add(others.getTree());

            	    // AST REWRITE
            	    // elements: clauseSemicolon
            	    // token labels: 
            	    // rule labels: retval
            	    // token list labels: 
            	    // rule list labels: 
            	    // wildcard labels: 
            	    if ( state.backtracking==0 ) {

            	    retval.tree = root_0;
            	    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            	    root_0 = (Object)adaptor.nil();
            	    // 52:68: -> ^( OPERATOR[\"AND\"] ( clauseSemicolon )+ )
            	    {
            	        // /dvt/workspace/montysolr/contrib/adsabs/grammars/ADS.g:52:71: ^( OPERATOR[\"AND\"] ( clauseSemicolon )+ )
            	        {
            	        Object root_1 = (Object)adaptor.nil();
            	        root_1 = (Object)adaptor.becomeRoot(
            	        (Object)adaptor.create(OPERATOR, "AND")
            	        , root_1);

            	        if ( !(stream_clauseSemicolon.hasNext()) ) {
            	            throw new RewriteEarlyExitException();
            	        }
            	        while ( stream_clauseSemicolon.hasNext() ) {
            	            adaptor.addChild(root_1, stream_clauseSemicolon.nextTree());

            	        }
            	        stream_clauseSemicolon.reset();

            	        adaptor.addChild(root_0, root_1);
            	        }

            	    }


            	    retval.tree = root_0;
            	    }

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {
